bin_PROGRAMS=macierze
macierzedir=../
macierze_PROGRAMS=macierze
macierze_SOURCES=reszta/macierz.c operacje/suma.c operacje/roznica.c operacje/iloczyn.c main.c we_wy/wczytaj_konsola.c we_wy/pliki.c we_wy/wczytaj_plik.c we_wy/wypisz_konsola.c we_wy/wypisz_plik.c include/macierz.h include/suma.h include/roznica.h include/wczytaj.h include/wypisz.h include/pliki.h include/iloczyn.h
macierze_CPPFLAGS=-I./include -O2
macierze_LDFLAGS=-lm
